force-app/main/default/objects/Platform_Action_Settings__mdt/Platform_Action_Settings__mdt.object-meta.xml
<CustomObject>
    <description>Used to control configuration options for the platform action centralized Platform Event model.

The platform action handler will only grab the first setting record listed as active. If there are more active they will be ignored until the one prior (via label alphabetical order) is inactived.</description>
    <label>Platform Action Setting</label>
    <pluralLabel>Platform Action Settings</pluralLabel>
</CustomObject>