force-app/main/default/objects/Platform_Action_Settings__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Defines if this setting is active and should be used in handler. Note only the first active (first defined by alphabetical order of label name) is used to determine runtime settings. Although there can be multiple active settings only one is used. This logic can be used to hot swap settings if need be.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>