force-app/main/default/objects/Platform_Action_Settings__mdt/fields/Batch_Size__c.field-meta.xml
<CustomField>
    <fullName>Batch_Size__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Defines the number of platform action events to be run in a single execution context</description>
    <inlineHelpText>Range from 1-2000</inlineHelpText>
    <label>Batch Size</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>