force-app/main/default/objects/Platform_Action_Settings__mdt/fields/Max_Retries__c.field-meta.xml
<CustomField>
    <fullName>Max_Retries__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Defines the number of times an event will retry itself if there is an error. Note there is a max of 10 (including initial run) that once hit will result in the trigger being deactivated https://developer.salesforce.com/docs/atlas.en-us.platform_events.meta/platform_events/platform_events_subscribe_apex_refire.htm</description>
    <inlineHelpText>range from 0 - 9</inlineHelpText>
    <label>Max Retries</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>