force-app/main/default/objects/Platform_Action_Settings__mdt/fields/Worker_Batch_Size__c.field-meta.xml
<CustomField>
    <fullName>Worker_Batch_Size__c</fullName>
    <defaultValue>200</defaultValue>
    <description>Defines the Max batch size of a worker platform event</description>
    <inlineHelpText>Range 1-2000</inlineHelpText>
    <label>Worker Batch Size</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>