force-app/main/default/objects/Platform_Action_Settings__mdt/validationRules/Enforce_Batch_Range.validationRule-meta.xml
<ValidationRule>
    <fullName>Enforce_Batch_Range</fullName>
    <active>true</active>
    <description>Doesn&apos;t allow the Batch Size range to exceed 1-2000</description>
    <errorConditionFormula>OR(
 Batch_Size__c &lt; 1,
 Batch_Size__c &gt; 2000
)</errorConditionFormula>
    <errorDisplayField>Batch_Size__c</errorDisplayField>
    <errorMessage>Batch Size must be between 1-2000</errorMessage>
</ValidationRule>