force-app/main/default/objects/Platform_Action_Settings__mdt/validationRules/Enforce_Retry_Range.validationRule-meta.xml
<ValidationRule>
    <fullName>Enforce_Retry_Range</fullName>
    <active>true</active>
    <description>Enforces Retry range to limit problems that could disable the trigger handler
https://developer.salesforce.com/docs/atlas.en-us.platform_events.meta/platform_events/platform_events_subscribe_apex_refire.htm</description>
    <errorConditionFormula>OR(
  Max_Retries__c &lt; 0,
  Max_Retries__c &gt; 9
)</errorConditionFormula>
    <errorDisplayField>Max_Retries__c</errorDisplayField>
    <errorMessage>Max retries needs to be within the range 0-9 to avoid inactivating the trigger</errorMessage>
</ValidationRule>