force-app/main/default/objects/Platform_Action_Settings__mdt/validationRules/Enforce_Worker_Batch_Range.validationRule-meta.xml
<ValidationRule>
    <fullName>Enforce_Worker_Batch_Range</fullName>
    <active>true</active>
    <description>Enforces worker batch range to be within 1-2000</description>
    <errorConditionFormula>Or(
 Worker_Batch_Size__c &lt; 1,
 Worker_Batch_Size__c &gt; 2000
)</errorConditionFormula>
    <errorDisplayField>Worker_Batch_Size__c</errorDisplayField>
    <errorMessage>Worker Batch Size must be within 1-2000</errorMessage>
</ValidationRule>