force-app/main/default/objects/Platform_Action_Settings__mdt/listViews/All_Platform_Action_Settings.listView-meta.xml
<ListView>
    <fullName>All_Platform_Action_Settings</fullName>
    <columns>MasterLabel</columns>
    <columns>Active__c</columns>
    <columns>Batch_Size__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Platform Action Settings</label>
</ListView>